[package]
name = "tracing-dipstick-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dipstick = "0.9.0"
env_logger = "0"
log = "0.4"
tracing = "0"
tracing-dipstick = { path = "../tracing-dipstick" }
tracing-subscriber = "0"
